--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,22 @@
-[project]
-name = "core"
-version = "0.0.2"
-authors = [
-  { name="Peter Rauscher", email="peter@peterrauscher.com" },
-]
-description = "Core package for SoleSearch"
-requires-python = ">=3.12"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-]
-
-[project.urls]
-Homepage = "https://github.com/SoleSearch-Demos/core"
-Issues = "https://github.com/SoleSearch-Demos/core/issues"
-
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[project]
+name = "core"
+dynamic = ["version"]
+requires-python = ">=3.12"
+description = "Core package for SoleSearch"
+authors = [
+  { name="Peter Rauscher", email="peter@peterrauscher.com" },
+]
+dependencies = ["sgqlc"]
+
+[tool.hatch.version]
+path = "src/core/__about__.py"
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/core"]
